1.1.5 FIX: Guild members not showing

--- a/css/ca_stats.css
+++ b/css/ca_stats.css
@@ -269,7 +269,6 @@
 #cageNextDemi > div > div {
 	height: 12px;
 	width: 1%;
-	background-color: #1A7A30;
 	position: absolute;
 	border-radius: 3px;
 }
